# scheduler

./: .gitignore  CMakeLists.txt  README.md  SchedulerConfig.h.in
docs/: scheduler
examples/: constraint.zig  csp.zig  ortools_csp.cc  spt.zig  wcsp.zig  wspt.zig
libastro/: riset_cir.c
src/: main.cc
src/include/: libastro.h
src/model/: TelescopeConfiguration.cc  TelescopeLimits.cc  angle.cc  object.cc  telescope.cc
